open-policy-agent/gatekeeper/require-resources/deployment-without-resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-without-resource
spec:
  selector:
    matchLabels:
      app: busybox-without-resource
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox-without-resource
    spec:
      containers:
        - name: busybox
          image: busybox
          command: ['sh', '-c', 'echo Container 1 is Running ; sleep 3600']
